# adaptivedb

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Dockerfile  PLAN.md  README.md
queries/: definition.ddl  insert.sql  select.sql
src/: main.rs
src/catalogue/: basic_types.rs  basictype.h  catalogue.cpp  catalogue.h  mod.rs
src/config/: logcolor.h
src/core/: application.cpp  application.h  base.cpp  base.h  entrypoint.cpp  log.h  server.cpp  server.h  versionconfig.h  versionconfig.h.in
src/ddl/: ddllexer.cpp  ddllexer.h  ddlparser.cpp  ddlparser.h  ddlsemantic.cpp  ddlsemantic.h
src/handler/: catalogue.cpp  catalogue.h  catalogue.rs  data.rs  index.cpp  index.h  mod.rs  schema.cpp  schema.h
src/queryprocessing/: README.md  ddl.rs  ddllexer.cpp  ddllexer.h  ddlparser.h  ddlsemantic.h  dml.rs  mod.rs  sql.rs
src/queryprocessing/ddl/: ddlparser.h  ddlsemantic.h
src/skyline/: PLAN.md
src/transaction/: wal.rs
test/: CMakeLists.txt
test/ddl/: ddllexertest.cpp  ddlparsertest.cpp  ddlsemantictest.cpp
test/queryprocessing/: ddllexertest.cpp  ddlparsertest.cpp  ddlsemantictest.cpp
test/queryprocessing/ddl/: ddllexertest.cpp  ddlparsertest.cpp  ddlsemantictest.cpp
uploadschema/: uploadschema.py
